Added worksheets up to 09

--- a/worksheets/worksheet_01.ipynb
+++ b/worksheets/worksheet_01.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Yingjie Ouyang\n",
+    "\n",
+    "UID: U86074230\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -172,7 +172,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git is a version control system, accessed through the terminal. GitHub is a website used to host and back up files, and is accessed via your browser"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +186,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone (repo url)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +200,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Clone"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,7 +214,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. Because you made a copy, your copy will reflect the state of the repo at the time it was created."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,7 +228,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git checkout -b branch_name : create new branch\n",
+    "\n",
+    "git commit -m \"message\" : commit changes, adding message to document updates\n",
+    "\n",
+    "git push origin branch_name : push updates to branch_name use -f to force updates if there are conflicts"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,7 +246,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git pull origin main"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,7 +260,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "One branch may have had changes made to an earlier version of it. These often need to be resolved with manual intervention."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,7 +274,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Clone repo to make a new fork from the main branch\n",
+    "2. Make any changes you need within the fork\n",
+    "3. Create a pull request and select which branch you would like to merge it with\n",
+    "4. Add a description of the changes made and submit"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,6 +291,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "git status - check the status of the branch, i.e. has it been committed, is it up to date?\n",
+    "\n",
+    "git remote add upstream (url) - add new remote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -278,10 +312,17 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
